[tool.poetry]
name = "cryptoman"
version = "0.1.0"
description = "A public plugin for crypto payment over Kenar Divar platform"
authors = ["Mohammad Hosein Moti Birjandi <m.h.motie@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
requests = "^2.32.3"
djangorestframework = "^3.15.1"
psycopg2-binary = "^2.9.9"
django-filter = "^24.2"
django-cors-headers = "^4.3.1"
markdown = "^3.6"
django-health-check = "^3.18.1"
psutil = "^5.9.8"
gunicorn = "^22.0.0"
coverage = "7.4.4"
django-prometheus = "^2.3.1"
pytz = "^2025.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pre-commit = "^3.7.0"
coverage = "7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
